@@ -2779,7 +2779,7 @@ for (my $n = 16; $n <= 19; ++$n)
 show_ntests();
 # ----------
 $td->notify("--- Specific File Tests ---");
-$n_tests += 7;
+$n_tests += 9;
 
 # Special PDF files that caused problems at some point
 
@@ -2810,6 +2810,14 @@ $td->runtest("check output",
 $td->runtest("check fix-qdf idempotency",
 	     {$td->COMMAND => "fix-qdf a.pdf"},
 	     {$td->FILE => "a.pdf", $td->EXIT_STATUS => 0});
+$td->runtest("pages points to page",
+             {$td->COMMAND =>
+                  "qpdf --static-id --linearize pages-is-page.pdf a.pdf"},
+             {$td->FILE => "pages-is-page.out", $td->EXIT_STATUS => 3},
+             $td->NORMALIZE_NEWLINES);
+$td->runtest("check output",
+	     {$td->FILE => "a.pdf"},
+	     {$td->FILE => "pages-is-page-out.pdf"});
 
 show_ntests();
 # ----------
