@@ -1,3 +1,9 @@
+2020-02-22  Jay Berkenbilt  <ejb@ql.org>
+
+	* Detect, warn, and correct the case of /Pages in the document
+	catalog incorrectly pointing to a page or intermediate node
+	instead of the root of the pages tree. Fixes #398.
+
 2020-01-26  Jay Berkenbilt  <ejb@ql.org>
 
 	* 9.1.1: release
